syntax = "proto3";
package Hotels;


service Hotels{
    rpc getHotels(HotelRequest) returns(HotelResponse);
}

message HotelRequest{
    string cityCode =1;
}

message HotelResponse{
    string city = 1;
    repeated Hotel hotels= 2;
    bool cache = 3;
}

message Hotel{
    string name = 1;
    string hotelId =2;
}

